terminando os parceiros, ainda com alguns erros
